add database to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 - travis_retry script/cached-bundle install --deployment --without development
 before_script:
 - cp config/database.travis.yml config/database.yml
-- psql -c 'create database growthspaces_test;' -U postgres
+- psql -c 'create database dmpd_test;' -U postgres
 - bundle exec rake db:migrate RAILS_ENV=test
 script:
 - bundle exec rake
